[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Obstacle.tscn" type="PackedScene" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 452 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240, 12 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 512, 304, 0, 0, 0, 0, 512, 552 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 452 )

[node name="World" type="Node"]
script = ExtResource( 4 )
Obstacle = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 240, 428 )
scale = Vector2( 1, 1.00234 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -10.0
margin_right = 25.0
margin_bottom = 10.0
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 352 )

[node name="LeftBorder" type="StaticBody2D" parent="."]
position = Vector2( -8, -8 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBorder"]
position = Vector2( -4, 436 )
shape = SubResource( 2 )

[node name="TopBorder" type="StaticBody2D" parent="."]
position = Vector2( 8, -8 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopBorder"]
position = Vector2( 232, -4 )
shape = SubResource( 1 )

[node name="BottomBorder" type="StaticBody2D" parent="."]
position = Vector2( 8, 864 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBorder"]
position = Vector2( 232, 4 )
shape = SubResource( 1 )

[node name="ObstaclePath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="ObstacleFollow" type="PathFollow2D" parent="ObstaclePath"]
position = Vector2( 512, 304 )
rotation = 1.5708

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -72, -8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4, 436 )
shape = SubResource( 4 )

[node name="Spawn" type="Node2D" parent="."]
position = Vector2( 160, 352 )

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
